fixed about me and skills because were not centered

--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -63,11 +63,11 @@
     padding: 0 3rem;
   }
 
-  .me {
+  .about-me .me {
     margin: 0;
   }
 
-  .resume {
+  .about-me .resume {
     margin: 0;
     grid-column: 1/2;
   }
